--- a/build.gradle
+++ b/build.gradle
@@ -39,9 +39,13 @@ deploy {
 
 // Set this to true to enable desktop support.
 def includeDesktopSupport = false
-
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
 // Also defines JUnit 4.
+
+repositories{
+    mavencentral()
+}
+
 dependencies {
     implementation wpi.deps.wpilib()
     nativeZip wpi.deps.wpilibJni(wpi.platforms.roborio)
@@ -52,10 +56,13 @@ dependencies {
     nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
 
+
     testImplementation 'junit:junit:4.12'
 
     // Enable simulation gui support. Must check the box in vscode to enable support
     // upon debugging
+
+
     simulation wpi.deps.sim.gui(wpi.platforms.desktop, false)
 }
 
