move on path updating

--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,10 @@ def includeDesktopSupport = false
 
 
 dependencies {
+
+    implementation 'org.apache.commons:commons-csv:1.7'
+    
+
     implementation wpi.deps.wpilib()
     nativeZip wpi.deps.wpilibJni(wpi.platforms.roborio)
     nativeDesktopZip wpi.deps.wpilibJni(wpi.platforms.desktop)
@@ -52,7 +56,6 @@ dependencies {
     implementation wpi.deps.vendor.java()
     nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
-
 
     testImplementation 'junit:junit:4.12'
 
